Odd card rendering correctly. Create button aligned

--- a/src/styles.css
+++ b/src/styles.css
@@ -33,8 +33,8 @@
 }
 
 .fa-instagram:hover {
-  color: black;
-  background-color: white;
+  border-color: red;
+  background-color: red;
 }
 
 .content {
